--- a/package.json
+++ b/package.json
@@ -9,5 +9,6 @@
   },
   "scripts": {
     "osuny": "npx osuny-hugo-theme"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
